# MaskTextSpotter

./: pyproject.toml
