[tool.poetry]
name="maskrcnn_benchmark"
version="0.1"
description = "object detection in pytorch"
authors = ["fmassa"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
torch = "1.4.0"
torchvision= "^0.5.0"
GCC = "^4.9" 
CUDA = "^9.0"

[build-system]
requires = ["poetry>=0.12", "setuptools", "wheel", "ipython", "torch", "torchvision"]
